Seriously, Perl::Critic?!?

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -139,4 +139,4 @@ stop_words = ActiveKids afterwards arrayref arrayrefs attr autocommit AutoCommit
 [-NamingConventions::Capitalization]
 
 [Perlsecret]
-allow_secrets = Bang Bang, Key of Truth
+allow_secrets = Bang Bang, Venus, Key of Truth
