Minor Perl::Critic policy adjustments

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -28,6 +28,10 @@ stop_words = ActiveKids afterwards arrayref arrayrefs attr autocommit AutoCommit
 [-CodeLayout::RequireUseUTF8]
 [-CodeLayout::TabIndentSpaceAlign]
 [-CognitiveComplexity::ProhibitExcessCognitiveComplexity]
+[-Community::Each]
+[-Community::EmptyReturn]
+[-Community::PackageMatchesFilename]
+[-Community::WhileDiamondDefaultAssignment]
 [-Compatibility::PodMinimumVersion]
 [-ControlStructures::ProhibitCascadingIfElse]
 [-ControlStructures::ProhibitCStyleForLoops]
