--- a/.github/workflows/with_pg.yaml
+++ b/.github/workflows/with_pg.yaml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        perl: [ '5.36' ]
-        postgres: [ 'latest' ]
+        perl: [ '5.30', '5.36' ]
+        postgres: [ '11', 'latest' ]
 
     services:
       postgreshost:
