--- a/.github/workflows/with_pg.yaml
+++ b/.github/workflows/with_pg.yaml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         perl: [ '5.30', '5.36' ]
-        postgres: [ '11', 'latest' ]
+        postgres: [ '11', '13', 'latest' ]
 
     services:
       postgreshost:
