[skip ci] Attempt to always exclude our local testing script from any CI work

--- a/.github/workflows/with_pg.yaml
+++ b/.github/workflows/with_pg.yaml
@@ -4,6 +4,8 @@ on:
   push:
   pull_request:
   workflow_dispatch:
+  paths-ignore:
+    - 'testme.tmp.pl'
 #  schedule:
 #    - cron: '42 5 * * *'
 
