--- a/META.yml
+++ b/META.yml
@@ -21,6 +21,7 @@ build_requires:
   version                   : 0
 configure_requires:
   DBI                       : 1.614
+  ExtUtils::MakeMaker       : 7.64
   version                   : 0
 recommends:
   Cwd                       : 0
